# imagine-models

./: .gitmodules  CMakeLists.txt
.github/workflows/: cpp_ci.yml
ImagineModels/: __init__.py
ImagineModels/HelperFunctions/: CoordinateConversions.py
ImagineModels/MagneticFields/: RegularMagneticFields.py
c_library/: CMakeLists.txt
c_library/headers/ImagineModels/: Field.h  RegularField.h  RegularModels.h  UngerFarrar.h  helpers.h  units.h
c_library/headers/ImagineModelsRandom/: GaussianScalar.h  RandomField.h  RandomModels.h  RandomScalarField.h  RandomVectorField.h  random.tpp
c_library/source/: archimedes.cc  ensslinsteininger.cc  fauvet.cc  gaussianscalar.cc  hararimollerachroulet.cc  helix.cc  jaffe.cc  lognormal.cc  pshirkov.cc  randomjf12.cc  randomscalarfield.cc  regularjf12.cc  stanevbss.cc  sun.cc  svt22.cc  tinyakovtkachev.cc  ungerfarrar.cc  wmap.cc  ymw16.cc
c_library/test/: test_helpers.h  test_main.cc
c_library/test/random/: test_gaussianscalar.cc  test_random.cc
c_library/test/regular/: test_derivatives.cc  test_grid.cc  test_helix.cc  test_parameter_update.cc  test_regular.cc  test_uniform.cc
demos/cpp/: example.cc
demos/python/: model_library_demo.ipynb
demos/python/model_examples/: uf24_regular_demo.ipynb
paper/: paper.md
python_wrapper/: ImagineModels.cc
python_wrapper/include/: regular_trampoline.h
python_wrapper/include/regular/: UngerFarrarWrapper.h
